# falling-blocks

./: README.md  atom.xml  index.html  rss.xml
blog/: index.md  shell.nix  site.hs
blog/posts/part1/: cycle.md  lens.md  mtl.md  refactor.md
blog/templates/: default.html
code/part1/cycle/: default.nix  refactor-cycle.cabal  shell.nix
code/part1/cycle/lib/: Colour.hs  Event.hs  GameLoop.hs  GameState.hs  Render.hs
code/part1/free/: refactor-free.cabal  shell.nix
code/part1/free/exe/: Main.hs
code/part1/free/lib/: Clock.hs  Event.hs  GameLoop.hs  GameState.hs
code/part1/lens/: refactor-lens.cabal
code/part1/lens/exe/: Main.hs
code/part1/lens/lib/: Config.hs  Event.hs  GameLoop.hs  GameState.hs  Render.hs
code/part1/mtl/: default.nix  refactor-mtl.cabal  shell.nix
code/part1/mtl/lib/: Event.hs  GameLoop.hs  Render.hs
code/part1/refactor/: refactor.cabal  shell.nix
code/part1/refactor/exe/: Main.hs
code/part1/refactor/lib/: Event.hs  GameLoop.hs  GameState.hs  Render.hs
code/part1/timer/: default.nix  refactor-timer.cabal  shell.nix
code/part1/timer/lib/: Colour.hs  Config.hs  Event.hs  GameLoop.hs
code/post1/lens/: default.nix  refactor-lens.cabal  shell.nix
code/post1/lens/lib/: AppEvent.hs  GameLoop.hs  GameState.hs  Render.hs
code/post1/mtl/: LICENSE  refactor-mtl.cabal
code/post1/mtl/exe/: Main.hs
code/post1/mtl/lib/: AppEvent.hs  GameLoop.hs
code/post1/refactor/: refactor.cabal
code/post1/refactor/exe/: Main.hs
code/post1/refactor/lib/: AppEvent.hs  Render.hs
drafts/: basic.html  sdl2.html  timer.html
drafts/part1/: sdl2.html
posts/part1/: cycle.html  lens.html  mtl.html  refactor.html  timer.html
