name:                refactor-timer
version:             0.1.0.0
homepage:            http://dlaing.org/falling-blocks
license:             BSD2
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:       GameState
                       , Config
                       , Colour
                       , Clock
                       , Event
                       , Render
                       , GameLoop
  build-depends:         base               >= 4.8      && < 4.9
                       , sdl2               >= 2.0      && < 2.1
                       , linear             >= 1.19     && < 1.20
                       , mtl                >= 2.2      && < 2.3
                       , lens               >= 4.12     && < 4.13
                       , stm                >= 2.4      && < 2.5
  hs-source-dirs:      lib
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

executable run
  main-is:             Main.hs
  build-depends:         base               >= 4.8      && < 4.9
                       , sdl2               >= 2.0      && < 2.1
                       , mtl                >= 2.2      && < 2.3
                       , refactor-timer     >= 0.1      && < 0.2
  hs-source-dirs:      exe
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
