name:                refactor-mtl
version:             0.1.0.0
homepage:            http://dlaing.org/falling-blocks
license:             BSD2
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:       GameState
                       , AppEvent
                       , Render
                       , GameLoop
  build-depends:         base               >= 4.8      && < 4.9
                       , sdl2               >= 2.0      && < 2.1
                       , linear             >= 1.19     && < 1.20
                       , mtl                >= 2.2      && < 2.3
  hs-source-dirs:      lib
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

executable run
  main-is:             Main.hs
  build-depends:         base               >= 4.8      && < 4.9
                       , sdl2               >= 2.0      && < 2.1
                       , refactor-mtl       >= 0.1      && < 0.2
  hs-source-dirs:      exe
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
